--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -6,7 +6,9 @@
   <%= f.text_field :name %>
   <%= f.label :address %>
   <%= f.text_field :address %>
-  <%= f.label :rating %>
-  <%= f.number_field :rating %>
+  <%= f.label :category %>
+  <%= f.text_field :category %>
   <%= f.submit %>
 <% end %>
+
+<%= link_to "Go back to restaurants", restaurants_path %>
