--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,11 +2,11 @@
 
 <h2><%= @restaurant.name %></h2>
 <p><%= @restaurant.address %></p>
-<p><%= @restaurant.rating %></p>
+<p><%= @restaurant.category %></p>
 
 <%= link_to "Delete",
   restaurant_path(@restaurant),
   data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
 %>
 
-<!--<%= link_to(title, path) %> -->
+<%= link_to "Go back to restaurants", restaurants_path %>
